--- a/compose.yaml
+++ b/compose.yaml
@@ -13,8 +13,11 @@ services:
       context: .
       target: final
     ports:
-      - 5282:8080
-      - 443:7211
+      - 8080:8080
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      
+
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
